@@ -15,7 +15,7 @@ typedef unsigned short u_short;
 typedef unsigned int u_int;
 typedef unsigned long u_long;
 
-typedef UINT_PTR SOCKET;
+typedef INT_PTR SOCKET;
 
 #ifndef FD_SETSIZE
 #define FD_SETSIZE 64
